# game-off

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build_win.yml
assets/sprites/shaders/: ss_material.wgsl
docs/: GDD.md
src/: config.rs  lib.rs  main.rs
src/app/: bevy.rs  input.rs  mod.rs
src/core/: bevy.rs  input.rs  mod.rs  sets.rs
src/macros/: plugin.rs
src/states/: manager.rs  mod.rs
src/states/scenes/: testing.rs
src/systems/: mod.rs
src/systems/camera/: controller.rs  data.rs  mod.rs  spawn.rs
src/systems/materials/: material_atlas.rs  mod.rs
src/systems/turns/: mod.rs  on_change.rs  turn.rs
src/systems/ui/: data.rs  mod.rs
src/systems/world/: mod.rs
src/systems/world/grid/: coord.rs  grid.rs  mod.rs  spawn.rs
src/systems/world/hex/: hex.rs  kind.rs  mod.rs  relation.rs  spawn.rs  state.rs
src/systems/world/tiles/: data.rs  grid.rs  mod.rs  spawn.rs  tile_state.rs
src/utils/: grid.rs
