[package]
name = "game-off"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[features]
webgl2 = []

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
debug = false

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[[bin]]
name = "game-off"
path = "src/main.rs"

[package.metadata.win]
windows_subsystem = "windows"

[dependencies]
bevy = "0.17.2"
leafwing-input-manager = "0.18.0"
